[gd_scene load_steps=6 format=3 uid="uid://c8b2sa3tch72g"]

[ext_resource type="Texture2D" uid="uid://ba0qex7yqd158" path="res://src/assets/TODO/player.png" id="1"]
[ext_resource type="Script" path="res://src/actors/Enemy.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://pnklainsjfr7" path="res://src/assets/sounds/hit.wav" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 8.0

[sub_resource type="CircleShape2D" id="2"]
radius = 8.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 33
motion_mode = 1
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="AnimatedSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
scale = Vector2(1.05, 1.05)
shape = SubResource("2")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
